# sdl-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  cube.cpp  cube.hpp  input.cpp  input.hpp  main.cpp  png.cpp  png.hpp  screen.cpp  screen.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: main.frag  main.vert
